# aver

./: .gitignore  LICENSE.md  Makefile  README.md  configure
compiler/: Instruction.ml  Makefile  ast.ml  averc.opam  bytecode.ml  dune  dune-project  generics.ml  instruction.ml  lexer.mll  main.ml  parse.ml  parser.mly  pprint.ml  table.ml  tast.ml  tpprint.ml  typing.ml
examples/: arrays.av  arrays.avb  binarytrees.av  factors.av  fib.av  fib_rec.avb  fizzbuzz.av  functions.avb  hello_world.avb  if.avb  mand.av  null.avb  obj.av  objs.avb  overall.av  overall.avb  sorting.av  sorting.avb  sqr.av  sqr.avb  test.av  test.avb  trees.av  trees.avb  while.av  while.avb
examples/linked_list/: generic.av  int.av  int.avb  string.av
src/compiler/: .merlin  Instruction.ml  Makefile  README.md  ast.ml  aver.opam  bytecode.ml  dune  dune-project  generics.ml  lexer.mll  main.ml  parser.messages  parser.mly  pprint.ml  table.ml  tast.ml  test.av  types.ml  typing.ml
src/prototype-builder/: Instruction.ml  ast.ml  bytecode.ml  lexer.mll  parser.messages  parser.mly
src/prototype-interpreter/: Makefile  frame.py  logfile  main.py  opcodes.py  stack.py  symboltable.py  vm.py
src/rpn-builder/: Instruction.ml  Makefile  a.avb  ast.ml  bytecode.ml  dune  fib.av  fib.avb  lexer.mll  main.ml  parse.ml  parser.messages  parser.mly  test  test.av  test.avb  util.ml  while.av  while.avb
src/rpn-interpreter/: README.md  main-c  main.py  opcodes.py  out
src/vm/: Makefile  frame.py  function.py  main.py  opcodes.py  stack.py  (+2 more)
vm/: Makefile  frame.py  main.py  opcodes.py  vm.py
(+78 files in other folders)
